[project @ 2003-10-07 13:57:24 by rlubke] Removed JDK 1.4.x dependencies.
Original author: rlubke
Date: 2003-10-07 13:57:25+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@2037 761efcf2-d34d-6b61-9145-99dcacc3edf1